Adjusted header to use sticky positioning and increased top margin for all pages to prevent content overlap.

--- a/src/NammaTeaKada/Home.css
+++ b/src/NammaTeaKada/Home.css
@@ -37,7 +37,7 @@ main{
 
 .home-title{
   color: hsl(38, 100%, 50%);
-  margin-left: -600px;
+  margin-left: -620px;
   /* margin-right: auto; */
   margin-top: 100px;
   font-size: 5rem;
